--- a/index.html
+++ b/index.html
@@ -114,22 +114,22 @@
         <h2 class="t36">Our Team</h2>
         <ul class="team-list">
           <li class="team-item">
-            <img src="images/team1.svg" alt="Mark Guerrero" />
+            <img src="images/team1.jpg" alt="Mark Guerrero" />
             <h3 class="t20">Mark Guerrero</h3>
             <p class="t16">Product Designer</p>
           </li>
           <li class="team-item">
-            <img src="images/team2.svg" alt="Tom Ford" />
+            <img src="images/team2.jpg" alt="Tom Ford" />
             <h3 class="t20">Tom Ford</h3>
             <p class="t16">Frontend Developer</p>
           </li>
           <li class="team-item">
-            <img src="images/team3.svg" alt="Camila Garcia" />
+            <img src="images/team3.jpg" alt="Camila Garcia" />
             <h3 class="t20">Camila Garcia</h3>
             <p class="t16">Marketing</p>
           </li>
           <li class="team-item">
-            <img src="images/team4.svg" alt="Daniel Wilson" />
+            <img src="images/team4.jpg" alt="Daniel Wilson" />
             <h3 class="t20">Daniel Wilson</h3>
             <p class="t16">UI Designer</p>
           </li>
